# andhealth_interview

./: .gitignore  340b_core_structure.md  Dockerfile  README.md  docker-compose.yml  explore_json.py  json_size_checker.py  pyproject.toml
dbt/: dbt_project.yml  package-lock.yml  packages.yml
dbt/macros/: get_region.sql
dbt/models/: sources.yml
dbt/models/marts/: dim_contacts.sql  dim_contacts.yml  dim_covered_entities.sql  dim_covered_entities.yml  dim_location.sql  dim_location.yml  fact_pharmacy_relationships.sql  fact_pharmacy_relationships.yml  fact_provider_participation.sql  fact_provider_participation.yml
dbt/models/reports/: participation_overview_340b_report.sql  participation_overview_340b_report.yml  state_340b_participation_analysis.sql  state_340b_participation_analysis.yml
dbt/models/staging/: stg_contract_pharmacies.sql  stg_contract_pharmacies.yml  stg_covered_entities.sql  stg_covered_entities.yml  stg_covered_entity_addresses.sql  stg_covered_entity_addresses.yml  stg_covered_entity_contacts.sql  stg_covered_entity_contacts.yml  stg_covered_entity_medicaid.sql  stg_covered_entity_medicaid.yml  stg_covered_entity_npi.sql  stg_covered_entity_npi.yml  stg_medicaid_addresses.sql  stg_medicaid_addresses.yml  stg_medicaid_contacts.sql  stg_medicaid_contacts.yml  stg_medicaid_entities.sql  stg_medicaid_entities.yml
sql/: init.sql
src/etl/: loader.py
