[tool.poetry]
name = "340b-data-pipeline"
version = "0.1.0"
description = "Data pipeline for 340B OPAIS data"
authors = ["Your Name <your.email@example.com>"]
package-mode = false  # Explicitly disable package mode

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
ijson = "^3.2.3"  # For streaming large JSON files
rich = "^13.3.1"  # For pretty printing
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.0"
markdown = "^3.5.1"  # For markdown generation

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"